# libcint-meson

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  generate.patch  generate.sh  patch.sh  tests.sh
.github/workflows/: publish.yml
for-libcint/: base_cint_funcs.h
for-meson/: libcint.wrap  meson.build  meson_options.txt
for-meson/src/: meson.build
for-tests/test_meson_base/: EXPECTED  main.c
for-tests/test_meson_c_base/: main.c  meson.build
for-tests/test_meson_c_i8/: EXPECTED  main.c  meson.build
for-tests/test_meson_fortran/: EXPECTED  main.f90  meson.build
for-tests/test_meson_fortran_i8/: EXPECTED  main.f90  meson.build
for-tests/test_meson_i8/: EXPECTED
meson/: libcint.wrap  meson_options.txt
meson/include/: meson.build
